<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
    <Button
        android:id="@+id/button1"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:gravity="left"
        android:text="@string/hobies_and_societies" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1"
        android:gravity="left"
        android:text="@string/Social_life" />
    
    <Button
        android:id="@+id/button3"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button2"
        android:gravity="left"
        android:text="@string/Accomodation" />

    <Button
        android:id="@+id/button4"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button3"
        android:gravity="left"
        android:text="@string/Settings" />
    
    


</RelativeLayout>